# gobb_analyzer

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  README.md  analysis_cout_logger.cpp  analysis_cout_logger.hpp  analysis_data_file_handler.cpp  analysis_data_file_handler.hpp  analyzer.cpp  analyzer.hpp  definitions.cpp  definitions.hpp  generate_location_quad_maps.py  generate_man.sh  generate_piece_quad_index_maps.py  gobb_analyze.1.md  gobb_analyze.cpp  gobb_analyzer_common.py  gobb_inspect.1.md  gobb_inspect.cpp  gobb_inspect_processor.cpp  gobb_inspect_processor.hpp  inspector.cpp  inspector.hpp  position.cpp  position.hpp  position_test.cpp  position_text_creator.cpp  position_text_creator.hpp  string_to_uint.hpp  transformer.cpp  transformer.hpp  version.hpp
